# kairos-ontology-toolkit

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LICENSE copy  NOTICE  README copy.md  README.md  SECURITY.md  demo_domains.py  docker-compose.yml  pyproject.toml  release.ps1  release.sh  setup.py  validation-report.json
.docs/2-DSD/version 20260102T190602/: 01-product-requirements.md  02-technical-architecture.md  README.md  (+5 more)
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml  version-check.yml
docs/: MIGRATION.md  README.md  RELEASING.md  TOOLKIT_IMPROVEMENT_SPEC 1.md  USER_GUIDE.md  design-decisions.md  medallion-restructure-advisory.md
docs/archive/: CR3-naturalKey-identity-strategy-2026-05-30.md  README.md  accelerator-first-modeling-recommendation-2026-06-15.md  dddgovernance.md  extension-vocabulary-review-2026-05-30.md  skill-redesign.md
docs/demo/: demo.md
docs/design/: dd-014-architecture.md  dd-032-reference-model-alignment.md  dd-034-extension-explanation.md  dd-038-bronze-introspection-architecture.md  dd-039-source-schema-spec.md  dd-040-skill-lifecycle-architecture.md  dd-065-ai-pre-modeling-performance.md  extension-explanation.md  mapping-hardening.md  mdmhubdesignv2.md  scd-type-aware-dbt-silver.md  silver-relationship-types.md  skill-lifecycle-architecture.md  source-schema-spec.md  tier-1-5-reference-model-alignment.md  toolkit-design-decisions.md
docs/draft/: CR3-naturalKey-identity-strategy-2026-05-30.md  MDM Deepdive.md  TOOLKIT_IMPROVEMENT_SPEC_v2.md  dataplatform-extensions-approach.md  dataplatform-integration-plan.md  dbttransdesign-v2.md  dbttransdesign.md  dd-045-mapping-hints-2026-06-13.md  ddd-governance-implementation-plan.md  evidence-led-accelerator-first-modeling-approach-2026-06-15.md  extension-vocabulary-review-2026-05-30.md  fix-dbt-naming.md  fix.md  huboptimalisation.md  logistics-accelerator-dbt-silver-design-plan.md  mdmhub.md  mdmhubdesign.md  medallion-restructure-advisory.md  scdupdate.md  silverfirstdesign.md  toolkitoptimizations.md  visual-explorer-spec.md
docs/instruction-guides/: context-engineer-methodology-guide.md  data-engineer-methodology-guide.md  integration-demo-dry-run.md  integration-engineer-methodology-guide.md
docs/mdm/: kairos-mdm-runtime.md  mdm-design-decisions.md  mdm-navigator-spec.md  mdmhubdesignv2.md  user-stories.md
docs/methodology/: accelerator-first-modeling.md
ontologies/: customer.ttl  sample.ttl
reference-models/: catalog-v001.xml
scripts/: install-hooks.ps1  sync_dev_skills.py
service/: .env.example  Dockerfile  requirements.txt
service/app/: config.py  main.py
service/frontend/: index.html  package-lock.json  package.json
service/static/: app.js  index.html  style.css
shapes/: customer.shacl.ttl
src/kairos_ontology/: __init__.py  __main__.py  _concurrency.py  _cost.py  _provenance.py  ai_provider.py  alignment_coverage.py  analyse_sources.py  archetype_loader.py  archetype_topology.py  catalog_test.py  catalog_utils.py  claim_coverage.py  claim_projection_sync.py  claim_registry.py  coverage_report.py  ddd.py  decide_claims.py  derive_claims.py  discovery_extraction.py  draft_model_report.py  extract_schema.py  generate_staging.py  glossary_builder.py  hub_utils.py  import_flatfile.py  import_session.py  import_source.py  import_tmdl.py  inventory.py  migrate_claims.py  ontology_ops.py  pbi_fit_gap.py  projector.py  propose_alignment.py  silver_sample_audit.py  source_coverage.py  source_delta.py  tmdl_parser.py  validator.py
tests/: __init__.py  _determinism_probe.py  archetype_fixtures.py  conftest.py  test_ai_provider.py  test_alignment_coverage.py  test_analyse_sources.py  test_archetype_loader.py  test_archetype_topology.py  test_aspirational_stubs.py  test_azure_functions_projector.py  test_binding_analysis.py  test_catalog_utils.py  test_claim_coverage.py  test_claim_projection_sync.py  test_claim_registry.py  test_cli_dbt_contract_sync.py  test_cli_dbt_validation.py  test_cli_discovery_conformance.py  test_cli_inventory.py  test_cli_path_resolution.py  test_cli_skill_gate.py  test_cli_suggest_shapes.py  test_cli_update_refmodels.py  test_cli_update_upgrade.py  test_cli_venv_guard.py  test_cli_version_guard.py  test_completeness_model.py  test_conformance_artifact.py  test_dapr_projector.py  test_dbt_artifact_merge.py  test_dbt_bundle.py  test_dbt_contract_sync.py  test_dbt_contracts.py  test_dbt_phases.py  test_dbt_projection_gate.py  test_dbt_projector.py  test_dbt_validation.py  test_ddd.py  test_decide_claims.py  (+69 more)
tests/mdm/: test_mdm_profile.py  test_mdm_validation.py
tests/scenarios/: __init__.py  conftest.py  test_scenario_advanced_dbt.py  test_scenario_analysis.py  test_scenario_aspirational_stubs.py  test_scenario_binding_parity.py  test_scenario_claims_sync.py  test_scenario_conformance.py  test_scenario_contract.py  test_scenario_cross_module.py  test_scenario_custom_triage.py  test_scenario_dbt.py  test_scenario_ddd.py  test_scenario_derive_claims.py  test_scenario_draft_model_report.py  test_scenario_fk_normalization.py  test_scenario_inspired.py  test_scenario_integration.py  test_scenario_issue220.py  test_scenario_lifecycle_gate.py  test_scenario_mapping_hints.py  test_scenario_mdm_ownership.py  test_scenario_mdm_profile.py  test_scenario_naming_parity.py  test_scenario_object_property_target.py  test_scenario_pbi_fitgap.py  test_scenario_projection.py  test_scenario_relationship_candidates.py  test_scenario_release_gate.py  test_scenario_silver.py  test_scenario_silver_first_e2e.py  test_scenario_source_delta.py  test_scenario_specialization.py  test_scenario_status_binding.py  test_scenario_stub_downstream.py  test_scenario_stub_reconcile.py  test_scenario_suggest_shapes.py  test_scenario_truncation_integrity.py
tests/service/: conftest.py  test_application_models.py  test_chat.py  test_main.py  test_models_service.py  test_ontology.py  test_projection.py  test_tools.py  test_validation.py
(+395 files in other folders)
