[project]
name = "kairos-ontology-toolkit"
dynamic = ["version"]
description = "Validation and projection tools for OWL/Turtle ontologies in the Kairos platform"
authors = [{name = "Cnext", email = "info@cnext.eu"}]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.12"
keywords = ["ontology", "owl", "turtle", "rdf", "shacl", "validation", "projection"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "rdflib>=7.4.0",
    "pySHACL>=0.30.1",
    "Jinja2>=3.1.3",
    "click>=8.1.7",
    "PyYAML>=6.0",
    "openai>=1.0.0,<3.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "packaging>=23.0",
]

[project.urls]
Homepage = "https://github.com/Cnext-eu/kairos-ontology-toolkit"
Repository = "https://github.com/Cnext-eu/kairos-ontology-toolkit"

[project.scripts]
kairos-ontology = "kairos_ontology.cli.main:cli"

[dependency-groups]
dev = [
    "pytest>=8.0.0,<9.0.0",
    "pytest-cov>=4.1.0",
    "black>=24.1.0",
    "ruff>=0.5.0",
    "pytest-ruff>=0.4.0",
    "pytest-asyncio>=0.23,<1.0",
]
azure = [
    "azure-identity>=1.15.0,<2.0.0",
]
foundry = [
    "azure-ai-projects>=2.0.0,<3.0.0",
    "azure-identity>=1.15.0,<2.0.0",
]
flatfile = [
    "openpyxl>=3.1.0,<4.0.0",
]
parquet = [
    "pyarrow>=14.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/kairos_ontology/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/kairos_ontology"]

[tool.hatch.build.targets.sdist]
include = [
    "src/kairos_ontology/**/*",
]

[tool.black]
line-length = 100
target-version = ['py312']

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["F", "E4", "E7"]
per-file-ignores = {"tests/*" = ["E741", "E402", "F841"]}

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-m 'not slow'"
markers = [
    "slow: marks tests as slow QA checks (deselect with '-m \"not slow\"')",
]
filterwarnings = [
    # Ignore deprecation warnings from rdflib's SPARQL parser using old pyparsing API
    # This is a known issue in rdflib 7.5.0 with pyparsing 3.3.1
    # See: https://github.com/RDFLib/rdflib/issues/2563
    "ignore::DeprecationWarning:rdflib.plugins.sparql.parser",
    "ignore::DeprecationWarning:rdflib.plugins.sparql.parserutils",
    "ignore::DeprecationWarning:pyparsing.util",
]